@@ -6,18 +6,6 @@ Issues that arise when upgrading from the unsplit Debian syslog-ng
 from Squeeze (direct upgrades from earlier are not supported, and will
 not be).
 
-** Logrotate
-
-When upgrading from non-split to split, the logrotate files are not
-replaced, because the new ones are installed as syslog-ng-core,
-instead of syslog-ng.
-
-debian/rules should be updated to - if necessary - skip
-dh_installlogrotate, and do it on our own.
-
-This is fairly important, because otherwise logrotate will complain
-that two services try to rotate the same files.
-
 ** Logcheck
 
 A similar problem exists with logcheck, but I do not know the
